tests/sksl/errors/golden/OpenArray.glsl
### Compilation failed:

error: 2: expected expression, but found '='
1 error
